# AndroidDevWithCpp

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/glumes/androidcppsolib/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/c_lib/: c_file.c  c_mem.c
app/src/main/cpp/include/lib_log/: LogUtil.cpp  LogUtil.h
app/src/main/cpp/include/lib_logutil/: Logutil.cpp  Logutil.h
app/src/main/java/com/glumes/androidcppsolib/: InfoManagerActivity.java  MainActivity.java  MainActivity.kt  SampleListActivity.kt  SoApplication.kt
app/src/main/java/com/glumes/androidcppsolib/activity/: AbstractPlayerActivity.kt  AviBitmapPlayerActivity.kt  AviOpenGLPlayerActivity.kt  BitmapOperationActivity.kt  InfoManageActivity.kt  JNIMethodActivity.kt
app/src/main/java/com/glumes/androidcppsolib/adapter/: SampleListAdapter.kt  StudentInfoAdapter.kt  ViewHolder.kt
app/src/main/res/drawable/: info_card_bg.xml  info_item_bg.xml
app/src/main/res/layout/: activity_avi_open_glplayer.xml  activity_avi_player.xml  activity_base.xml  activity_base_list.xml  activity_bitmap_operation.xml  activity_info_manager.xml  activity_main.xml  activity_native_operation.xml  activity_sample_list.xml  info_card.xml  item_jni_method.xml  item_main.xml  item_student_info.xml  sample_list_item.xml  sample_type.xml  view_score_item.xml
app/src/main/res/values/: dimens.xml  strings.xml  styles.xml
app/src/test/java/com/glumes/androidcppsolib/: ExampleUnitTest.java
cppso/: CMakeLists.txt  build.gradle
cppso/src/androidTest/java/com/glumes/cppso/: ExampleInstrumentedTest.java
cppso/src/main/: AndroidManifest.xml
cppso/src/main/cpp/: CMakeLists.txt  access-cache.cpp  array-type-ops.cpp  logutil.h  native-lib.cpp  native-operation.cpp
cppso/src/main/cpp/avilib/: avidump.c  avilib.c  avilib.h  platform.h  platform_posix.c  platform_tc.c  static_avilib.h  static_wavlib.h  wavlib.c  wavlib.h
cppso/src/main/cpp/aviplayer/: AviPlayer.cpp  AviPlayer.h
cppso/src/main/cpp/common/: commonutil.cpp  commonutil.h  logutil.h
cppso/src/main/cpp/infomanager/: LoadManager.cpp  Student.cpp  Student.h
cppso/src/main/cpp/jnioperations/: array-type-operation.cpp  basic-type-operation.cpp  bitmap_operation.cpp  cache_filed_and_method.cpp  exceptions-operations.cpp  filed_and_method_operation.cpp  invoke_constructor.cpp  local_and_global_references.cpp  native_onload.cpp  string-type-operation.cpp  thread-operations.cpp  thread_operation.cpp  thread_operation.h
cppso/src/main/java/: com_glumes_cppso_aviplayer_AviPlayer.h  com_glumes_cppso_jnioperations_BitmapOps.h  com_glumes_cppso_jnioperations_ThreadOps.h
cppso/src/main/java/com/glumes/cppso/: NativeOperation.kt  SampleNativeMethod.java
cppso/src/main/res/values/: strings.xml
cppso/src/test/java/com/glumes/cppso/: ExampleUnitTest.java
(+51 files in other folders)
